--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1 {
   top: 30%;
   left: 50%;
   transform: translateX(-50%);
+  white-space: nowrap;
 }
 .btn {
   font-size: 0.8rem;
@@ -30,6 +31,7 @@ h1 {
   border-radius: 50px;
   text-align: center;
   border: 1px solid #fff;
+  white-space: nowrap;
 }
 
 .container {
@@ -108,8 +110,11 @@ h1 {
 @media (max-width: 500px) {
   h1 {
     font-size: 1.5rem;
+    top: 40%;
   }
   .btn {
     font-size: 0.5rem;
+    padding: 0 1rem;
+    top: 55%;
   }
 }
