--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ h1 {
   left: 50%;
   transform: translateX(-50%);
   white-space: nowrap;
+  margin: 0.5rem;
 }
 .btn {
   font-size: 0.8rem;
@@ -32,6 +33,7 @@ h1 {
   text-align: center;
   border: 1px solid #fff;
   white-space: nowrap;
+  margin: 0.5rem;
 }
 
 .container {
@@ -108,6 +110,18 @@ h1 {
 }
 
 @media (max-width: 500px) {
+  h1 {
+    font-size: 1.5rem;
+    top: 40%;
+  }
+  .btn {
+    font-size: 0.5rem;
+    padding: 0 1rem;
+    top: 55%;
+  }
+}
+
+@media (max-height: 410px) {
   h1 {
     font-size: 1.5rem;
     top: 40%;
