--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ h1 {
   left: 50%;
   transform: translateX(-50%);
   white-space: nowrap;
-  margin: 0.5rem;
 }
 .btn {
   font-size: 0.8rem;
@@ -121,14 +120,21 @@ h1 {
   }
 }
 
-@media (max-height: 410px) {
+@media (max-height: 330px) {
   h1 {
-    font-size: 1.5rem;
-    top: 40%;
+    top: 25%;
+    font-size: 1.4rem;
   }
   .btn {
     font-size: 0.5rem;
-    padding: 0 1rem;
-    top: 55%;
+  }
+}
+@media (max-height: 270px) {
+  h1 {
+    top: 25%;
+    font-size: 1rem;
+  }
+  .btn {
+    font-size: 0.5rem;
   }
 }
